--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,25 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Build WGT package
-      uses: 1024pix/tizen-studio-action@v1
-      with:
-        command: package
-        path: JewelTVAppTizen
-        package-type: wgt
+    - name: Install Tizen Studio CLI
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openjdk-11-jdk unzip wget
+        wget -q https://download.tizen.org/sdk/Installer/tizen-studio_6.1/web-cli_Tizen_Studio_6.1_ubuntu-64.bin
+        chmod +x web-cli_Tizen_Studio_6.1_ubuntu-64.bin
+        ./web-cli_Tizen_Studio_6.1_ubuntu-64.bin --accept-license --no-java-check -- /home/runner/work/tizen-studio
+        /home/runner/work/tizen-studio/package-manager/package-manager-cli.bin install TV-samsung-9.0 --accept-license
+
+    - name: Build and Package WGT
+      run: |
+        export PATH="$PATH:/home/runner/work/tizen-studio/tools/ide/bin:/home/runner/work/tizen-studio/tools"
+        tizen-cli.sh build-web -- JewelTVAppTizen
+        tizen-cli.sh package -t wgt -o JewelTVAppTizen/build -- JewelTVAppTizen
 
     - name: Upload WGT artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: tizen-wgt-package
-        path: JewelTVAppTizen/*.wgt
+        path: JewelTVAppTizen/build/*.wgt
