--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,20 +13,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Install Tizen Studio CLI
+    - name: Install Tizen Studio
       run: |
         sudo apt-get update
         sudo apt-get install -y openjdk-11-jdk unzip wget
         wget -q https://download.tizen.org/sdk/Installer/tizen-studio_6.1/web-cli_Tizen_Studio_6.1_ubuntu-64.bin
         chmod +x web-cli_Tizen_Studio_6.1_ubuntu-64.bin
-        ./web-cli_Tizen_Studio_6.1_ubuntu-64.bin --accept-license --no-java-check -- /home/runner/work/tizen-studio
-        /home/runner/work/tizen-studio/package-manager/package-manager-cli.bin install TV-samsung-9.0 --accept-license
+        ./web-cli_Tizen_Studio_6.1_ubuntu-64.bin --accept-license --no-java-check -- /home/runner/tizen-studio
+        /home/runner/tizen-studio/package-manager/package-manager-cli.bin install TV-Extension-9.0 --accept-license
 
     - name: Build and Package WGT
       run: |
-        export PATH="$PATH:/home/runner/work/tizen-studio/tools/ide/bin:/home/runner/work/tizen-studio/tools"
-        tizen-cli.sh build-web -- JewelTVAppTizen
-        tizen-cli.sh package -t wgt -o JewelTVAppTizen/build -- JewelTVAppTizen
+        export PATH="$PATH:/home/runner/tizen-studio/tools/ide/bin:/home/runner/tizen-studio/tools"
+        tizen build-web -- "JewelTVAppTizen"
+        tizen package -t wgt -o "JewelTVAppTizen/build" -- "JewelTVAppTizen"
 
     - name: Upload WGT artifact
       uses: actions/upload-artifact@v4
