--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,13 @@
-name: Build Tizen WGT
+name: Diagnostic - Find Tizen Studio Path
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
-  build:
+  diagnose:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
     - name: Install Dependencies
       run: |
         sudo apt-get update -y
@@ -22,22 +17,8 @@ jobs:
       run: |
         wget -q https://download.tizen.org/sdk/Installer/tizen-studio_6.1/web-cli_Tizen_Studio_6.1_ubuntu-64.bin
         chmod +x web-cli_Tizen_Studio_6.1_ubuntu-64.bin
-        ./web-cli_Tizen_Studio_6.1_ubuntu-64.bin --accept-license --no-java-check -- /home/runner/tizen-studio-install
+        ./web-cli_Tizen_Studio_6.1_ubuntu-64.bin --accept-license --no-java-check -- /home/runner/tizen-studio
         
-    - name: Install Tizen TV SDK
+    - name: List all files to find installation path
       run: |
-        TIZEN_PM=$(find /home/runner/tizen-studio-install -name "package-manager-cli.bin" | head -n 1)
-        $TIZEN_PM install TV-samsung-9.0 --accept-license
-
-    - name: Build and Package WGT
-      run: |
-        TIZEN_CLI_DIR=$(find /home/runner/tizen-studio-install -name "tizen" | xargs dirname)
-        export PATH="$PATH:$TIZEN_CLI_DIR"
-        tizen build-web -- "JewelTVAppTizen"
-        tizen package -t wgt -o "JewelTVAppTizen/build" -- "JewelTVAppTizen"
-
-    - name: Upload WGT artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: tizen-wgt-package
-        path: JewelTVAppTizen/build/*.wgt
+        ls -R /home/runner
